formulario no terminado

--- a/html/estadoEmbarazo.html
+++ b/html/estadoEmbarazo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Esfly</title>
     <link rel="shortcut icon" href="../imagen/header/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/headerr.css">
     <link rel="stylesheet" href="../css/estadoEmbarazo.css">
     <link rel="stylesheet" href="../css/pie.css">
     <!--Comentario sobre el link para importar la tipografia-->
