--- a/html/estasAnsioso.html
+++ b/html/estasAnsioso.html
@@ -13,7 +13,7 @@
     <link rel="shortcut icon" href="../imagen/header/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/estasAnsioso.css">
     <link rel="stylesheet" href="../css/pie.css">
-    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/headerr.css">
     <title>¿Estas ansioso?</title>
 </head>
 <body>
