--- a/html/contactanos.html
+++ b/html/contactanos.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
         <!--Fin tipografia-->
-        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/headerr.css">
         <link rel="stylesheet" href="../css/pie.css">
         <link rel="stylesheet" href="..//css/contactanos.css">
     <title>Contactanos</title>
