--- a/html/datos de cuenta.html
+++ b/html/datos de cuenta.html
@@ -12,7 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
         <!--Fin tipografia-->
-        <link rel="stylesheet" href="../css/header.css">
+        <link rel="stylesheet" href="../css/headerr.css">
         <link rel="stylesheet" href="../css/pie.css">
         <link rel="stylesheet" href="..//css/datos de cuenta.css">
     <title>Información de cuenta</title>
