correxiones de procesos de inicio de sesion

--- a/html/index.html
+++ b/html/index.html
@@ -103,7 +103,7 @@
         <div class=" card-buscar card p-4">
             <div class="card-body">
                 <h5 class="card-title text-center text-formu ">Busca tu Vuelo: </h5>
-                <form class="form-inline justify-content-center">
+                <form class="form-inline justify-content-center" action="Reservarvuelos.html">
 
 
                     <div class="form-group mt-4">
@@ -194,7 +194,7 @@
                         </select>
                     </div>
                     <!--AHI EL BOTON DE ABAJO TIENE Q DIRIGIT A DONDE DECIDA EL USUARIO (PAIS) -->
-                    <a href="../html/index.html"  class=" mt-5  d-flex flex-column align-items-center btn btn-primary">Buscar Vuelo</a>
+                    <a href="Reservarvuelos.html"  class=" mt-5  d-flex flex-column align-items-center btn btn-primary">Buscar Vuelo</a>
                 </form>
             </div>
         </div>
@@ -216,7 +216,7 @@
                 <div class="overlay-content">
                     <h4>Colombia</h4>
                     <h6>Palmas de cera del Valle del Cocora</h6>
-                    <a href="../html/.html"  class="btn btn-primary">Tomar viaje</a>
+                    <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                 </div>
             </div>
         </div>
@@ -228,7 +228,7 @@
                 <div class="overlay-content">
                     <h4>Belice</h4>
                     <h6>The Split: ¡La playa más hermosa de Belice!</h6>
-                    <a href="../html/belice.html"  class="btn btn-primary">Tomar viaje</a>
+                    <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                 </div>
             </div>
         </div>
@@ -240,7 +240,7 @@
                 <div class="overlay-content">
                     <h4>Guatemala</h4>
                     <h6>Barrio de antigua Guatemala</h6>
-                    <a href="../html/guatemala.html"  class="btn btn-primary">Tomar viaje</a>
+                    <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                 </div>
             </div>
         </div>
@@ -252,7 +252,7 @@
                 <div class="overlay-content">
                     <h4>Brazil</h4>
                     <h6>Río de Janeiro</h6>
-                    <a href="../html/brazil.html"  class="btn btn-primary">Tomar viaje</a>
+                    <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                 </div>
             </div>
         </div>
