--- a/html/ofertasYDestinos.html
+++ b/html/ofertasYDestinos.html
@@ -96,7 +96,7 @@
                     <div class="overlay-content">
                         <h4>Colombia</h4>
                         <h6>Palmas de cera del Valle del Cocora</h6>
-                        <a href="../html/.html"  class="btn btn-primary">Tomar viaje</a>
+                        <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                     </div>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                     <div class="overlay-content">
                         <h4>Belice</h4>
                         <h6>The Split: ¡La playa más hermosa de Belice!</h6>
-                        <a href="../html/belice.html"  class="btn btn-primary">Tomar viaje</a>
+                        <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                     </div>
                 </div>
             </div>
@@ -120,7 +120,7 @@
                     <div class="overlay-content">
                         <h4>Guatemala</h4>
                         <h6>Barrio de antigua Guatemala</h6>
-                        <a href="../html/guatemala.html"  class="btn btn-primary">Tomar viaje</a>
+                        <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                     <div class="overlay-content">
                         <h4>Brazil</h4>
                         <h6>Río de Janeiro</h6>
-                        <a href="../html/brazil.html"  class="btn btn-primary">Tomar viaje</a>
+                        <a href="login.php"  class="btn btn-primary">Tomar viaje</a>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
             <div class="container-fluid">
                 <p class="text-center fs-5 my-3"><b>Salar de Uyuni (Bolivia)</b></p>
                 <p>Se trata del salar más grande del mundo y el principal atractivo de Bolivia. ¡Tiene casi 11.000 kilómetros cuadrados de superficie! De hecho, los astronautas dicen que es el punto que más se refleja del planeta. Esta joya natural se encuentra en los Andes a casi 3.700 metros sobre el nivel del mar. </p>
-                <a href="" class="btn btn-primary border-0">Tomar vuelo</a>
+                <a href="login.php" class="btn btn-primary border-0">Tomar vuelo</a>
             </div>
         </div>
       </div>
@@ -186,7 +186,7 @@
                 <p class="text-center fs-5 my-3"><b> Parque Nacional Torres del Paine 
                     (Chile)</b></p>
                 <p>Este parque nacional es uno de los más bonitos que ver en Sudamérica. Se encuentra en la Patagonia chilena y es una de las áreas silvestres más protegidas del país. En su interior podrás visitar valles, ríos, lagos o glaciares como el Grey, el más famoso. </p>
-                <a href="" class="btn btn-primary border-0">Tomar vuelo</a>
+                <a href="login.php" class="btn btn-primary border-0">Tomar vuelo</a>
             </div>
         </div>
       </div>
@@ -197,7 +197,7 @@
                 <p class="text-center fs-5 my-3"><b> Centro histórico de Quito (Ecuador)</b></p>
                 <p>EQuito es una de las ciudades más infravaloradas de América del Sur. ¡Empezando porque es la capital más alta del mundo! Es cierto que La Paz es más alta, pero la capital de Bolivia es Sucre. ¡Y también la más cercana al Ecuador!
                     Sin embargo, el principal atractivo de Quito es su centro histórico. Fundado por los españoles en 1534, es el mejor conservado y menos alterado del continente.  </p>
-                    <a href="" class="btn btn-primary border-0">Tomar vuelo</a>
+                    <a href="login.php" class="btn btn-primary border-0">Tomar vuelo</a>
                 </div>
         </div>
       </div>
@@ -212,7 +212,7 @@
             <div class="container">
                 <p class="text-center fs-5 my-3"><b> Parque Nacional Los Glaciares y el Perito Moreno (Argentina)</b></p>
                 <p>El parque nacional más grande de Argentina no podía faltar en esta lista de los mejores lugares que ver en Latinoamérica. ¿Sabías que allí se encuentra la capa de hielo más grande fuera de las áreas polares? Alimenta, nada más y nada menos, que a 47 enormes glaciares.</p>
-                <a href="" class="btn btn-primary border-0">Tomar vuelo</a>
+                <a href="login.php" class="btn btn-primary border-0">Tomar vuelo</a>
             </div>
         </div>
       </div>
@@ -222,7 +222,7 @@
             <div class="container">
                 <p class="text-center fs-5 my-3"><b> Chichén Itzá y Riviera Maya (México)</b></p>
                 <p>México es uno de los grandes destinos turísticos mundiales. ¡Tiene tantas cosas por ver! Desde el Chichén Itzá, las ruinas mayas más famosas del mundo, hasta las paradisiacas playas de la Riviera Maya. ¡No te vas a aburrir! Respecto a Chichén Itzá, visitar esta antigua capital maya y ver sus impresionantes templos como el de Kukulkán es una experiencia magnífica. </p>
-                <a href="" class="btn btn-primary border-0">Tomar vuelo</a>
+                <a href="login.php" class="btn btn-primary border-0">Tomar vuelo</a>
             </div>
         </div>
       </div>
