--- a/html/datos de cuenta.html
+++ b/html/datos de cuenta.html
@@ -54,36 +54,39 @@
   <!--Fin header-->
 
 <body>
+  <div class="container-fluid">
     <div class="row py-5">
-        <div class="col-4 text-primary-emphasis bg-light-subtle border border-secondary-subtle rounded-3 p-5 ms-5">
-            <img src="../imagen/datosCuenta/foto_usuario.png" class="img-fluid" alt="">
-            <div class="card-body">
-                <button type="submit" class="btn btn-primary mb-5 ">Subir foto</button>
-                <p class="card-text">Requisitos para la foto: "Debe ser de frente, descubierta, sin accesorios, sin lentes o gafas de sol."</p>
+      <div class="col-4 text-primary-emphasis bg-light-subtle border border-secondary-subtle rounded-3 p-5 ms-5">
+          <img src="../imagen/datosCuenta/foto_usuario.png" class="img-fluid" alt="">
+          <div class="card-body">
+              <button type="submit" class="btn btn-primary mb-5 ">Subir foto</button>
+              <p class="card-text">Requisitos para la foto: "Debe ser de frente, descubierta, sin accesorios, sin lentes o gafas de sol."</p>
+            </div>
+      </div>
+      <div class="col-7 text-primary-emphasis bg-light-subtle border border-secondary-subtle rounded-3  p-5 ms-3">
+          <form class="my-auto">
+              <div class="">
+                <label for="InputEmail1" class="form-label">Nombre y apellido</label>
+                <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
               </div>
-        </div>
-        <div class="col-7 text-primary-emphasis bg-light-subtle border border-secondary-subtle rounded-3 p-5 ms-3">
-            <form>
-                <div class="mb-3">
-                  <label for="InputEmail1" class="form-label">Nombre y apellido</label>
+              <div class="mb-3">
+                <label for="InputPassword1" class="form-label">DUI</label>
+                <input type="password" class="form-control" id="InputPassword1">
+              </div>
+              <div class="mb-3">
+                  <label for="InputCorreo1" class="form-label">Correo</label>
+                  <input type="email" class="form-control" id="InputCorreo1">
+              </div>
+              <div class="mb-3">
+                  <label for="InputEmail1" class="form-label">Pasaporte</label>
                   <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
                 </div>
-                <div class="mb-3">
-                  <label for="InputPassword1" class="form-label">DUI</label>
-                  <input type="password" class="form-control" id="InputPassword1">
-                </div>
-                <div class="mb-3">
-                    <label for="InputCorreo1" class="form-label">Correo</label>
-                    <input type="email" class="form-control" id="InputCorreo1">
-                </div>
-                <div class="mb-3">
-                    <label for="InputEmail1" class="form-label">Pasaporte</label>
-                    <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
-                  </div>
-                  <button type="submit" class="btn btn-primary">Cambiar datos</button>
-              </form>
-        </div>
+                <button type="submit" class="btn btn-primary">Cambiar datos</button>
+            </form>
       </div>
+    </div>
+  </div>
+   
 </body>
    
 </html>
