--- a/html/index.html
+++ b/html/index.html
@@ -49,12 +49,12 @@
                <span class="navbar-text"></span>
    
                <form class="d-flex" role="search">
-                <a href="../html/login.php" class="btn btn-primary-outline-success btn-primary ms-1" type="submit">Iniciar sesión</a>
+                <a href="login.php" class="btn btn-primary-outline-success btn-primary ms-1" type="submit">Iniciar sesión</a>
   
-                <a class="btn btn-registro ms-1 " href="../html/registro.php" type="submit">Registrarse</a>
+                <a class="btn btn-registro ms-1 " href="registro.php" type="submit">Registrarse</a>
 
                </form>
-               <a href="../html/busqueda.html" class="btn  btn-primary-outline ms-1" type="submit"><img src="../imagen/header/lupa.png" class="" id="lupa" alt="" width="30"> Buscar</a>
+               <a href="busqueda.html" class="btn  btn-primary-outline ms-1" type="submit"><img src="../imagen/header/lupa.png" class="" id="lupa" alt="" width="30"> Buscar</a>
            </div>
        </div>
    </nav>
