cambios realizados para pagina web

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
@@ -22,6 +23,12 @@
     <!--Fin tipografia-->
 
     <title>ESFLY</title>
+    <style>
+        #espacio {
+  display: none;
+}
+
+    </style>
 </head>
 
 <body>
@@ -104,7 +111,7 @@
 
     <!--Seccion de vuelos de pagina web-->
 
-    <div class=" texto-titulo container-fluid mt-5  ">
+    <div class=" texto-titulo container-fluid mt-5 ps-5 ">
         <h5>Busca un vuelo ></h5>
     </div>
 
@@ -214,7 +221,7 @@
 
 
     <!--IMAGENES DE PROMOCION DE VIAJES-->
-    <div class=" texto-titulo container-fluid  mt-5">
+    <div class=" texto-titulo container-fluid  mt-5 ps-5">
         <h5>Algunas ofertas ></h5>
     </div>
 
@@ -274,13 +281,13 @@
 
     <!--CUADROS DE INFORMACION-->
 
-    <div class=" container-fluid texto-titulo  mt-5 ">
+    <div class=" container-fluid texto-titulo  mt-5 ps-5">
         <h5>Información sobre nosotros ></h5>
     </div>
 
     <div class="container-fluid mt-4 d-flex flex-column align-items-center">
 
-        <div class="card-container  card mt-5 col-lg-12">
+        <div class="card-container  card mt-5 col-lg-12 w-75">
             <div class="row g-0">
                 <div class="col-md-7">
                     <img src="../imagen/index/equipaje.png" class="img-card img-fluid rounded-start" alt="...">
@@ -297,7 +304,7 @@
             </div>
         </div>
 
-        <div class=" card-container card mt-5 col-lg-12">
+        <div class=" card-container card mt-5 col-lg-12 w-75">
             <div class="row g-0">
                 <div class="col-md-7">
                     <img src="../imagen/index/esflyInfo.png" class="img-card img-fluid rounded-start" alt="...">
@@ -314,7 +321,7 @@
             </div>
         </div>
 
-        <div class="card-container card mt-5  mt-5 col-lg-12">
+        <div class="card-container card mb-5  mt-5 col-lg-12 w-75">
             <div class="row g-0">
                 <div class="col-md-7 ">
                     <img src="../imagen/index/experiencia.png" class="img-card img-fluid rounded-start" alt="...">
@@ -332,7 +339,7 @@
         </div>
     </div>
     <!--FIN DE CUADROS DE INFORMACION-->
-
+    <div class="mt-5 p-5" id="espacio"> </div>
     <!--PREPARAR PARA VIAJAR (CLIENTE)-->
     <div class=" container-fluid texto-titulo  mt-5 ps-5">
         <h5>Información sobre nosotros ></h5>
