reserva de vuelos

--- a/html-php/tarjeta_tomarvuelo.html
+++ b/html-php/tarjeta_tomarvuelo.html
@@ -11,11 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Bayon&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-    <title>ESFLY</title>
+    <title>Busqueda de vuelo relacionadas</title>
 </head>
 
 <body>
 <style>
+
+    .body{
+        font-family: "Be Vietma Pro";
+    }
 
     .center-button {
         display: flex;
@@ -86,7 +90,7 @@
 
 <!-- Sección de vuelos de página web -->
 <div class="container mt-5">
-    <h5 id="search-flight-title">Detalles del Vuelo ></h5>
+    <h5 id="search-flight-title">Busquedas relacionada ></h5>
 </div>
 
 <!-- CUADRO DE DETALLES DEL VUELO -->
@@ -95,8 +99,8 @@
         <!-- Contenido a la izquierda -->
         <div class="info-container me-4">
 
-             <!-- Información del vuelo -->
-             <div class="info-row mt-4">
+            <!-- Información del vuelo -->
+            <div class="info-row mt-4">
                 <div>
                     <p><strong>País de Origen:</strong></p>
                     <p>Argentina</p>
@@ -109,7 +113,7 @@
             </div>
 
             <div class="info-row mt-4">
-                <div >
+                <div>
                     <p><strong>País de Destino:</strong></p>
                     <p>Brasil</p>
                 </div>
@@ -119,15 +123,13 @@
                 </div>
 
             </div>
-            <!-- Contador -->
-            <div class="mt-4 text-center">
-                <p><strong>Tu vuelo comienza en:</strong></p>
-                <p>1h:00:00</p>
-            </div>
             
+
+
+
             <!-- Botón -->
             <div class="text-center mt-4">
-                <button id="view-info-btn" type="button" class="btn btn-primary" style="width: 100%;">Ver Información del Vuelo</button>
+                <button id="view-info-btn" type="button" class="btn btn-primary" style="width: 100%;">Tomar Vuelo</button>
             </div>
         </div>
 
